--- a/.env_sample
+++ b/.env_sample
@@ -1,39 +1,21 @@
-# Postgres database URL. Make sure to add sslmode=disable if you're using local Postgres or unencrypted Postgres.
-# Format: postgres://user:password@localhost:port/database?sslmode=disable
-DATABASE_URL=postgres://ddrv:ddrv@localhost:5430/ddrv?sslmode=disable
-
-# Username used for the FTP server, and eventually for HTTP as well
-USERNAME=test
-
-# Password used for the FTP server, and eventually for HTTP as well
-PASSWORD=test
-
-# FTP_ADDR sets the address for the FTP server. ":2525" means listening on "0.0.0.0:2525"
-# Leaving blank will disable FTP server
-FTP_ADDR=:2525
-
-# If you're hosting your ddrv to the cloud you must open these ports in order for FTP to work properly.
-# Defines the range of ports that can be used for passive FTP connections
-# Enabling this option will enable PASV mode. Due to which if your ISP doesn't support port forwarding ddrv won't work.
-# FTP_PORT_RANGE=45000-50000
-
-# HTTP_ADDR sets the address for the HTTP server.
-# Leaving blank will disable HTTP server
-HTTP_ADDR=:2526
-
-# WEBDAV_ADDR sets the address for the WEBDAV server
-# Leaving blank will disable WEBDAV server
-WEBDAV_ADDR=:2527
-
-# Discord webhook URLs. Use this for sending attachment messages to Discord channels.
-# Can have multiple URLs separated by commas
-WEBHOOKS=
-
+##Postgress Data:
+#
+ps_name=db
+ps_user=user
+ps_pass=example
+#discord data:
+ddrv_hook1=weboook1
+ddrv_hook2=webhook2
+#porst config
+ftp_port=45001
+http_port=45002
+wd_port=45003
+ftp_range=45004-45014
+#ddrv options
 # Defines the maximum size (in bytes) of chunks to be sent via Discord webhook.
 # You should probably never touch this and if you do  don't set it to more than 25MB,
 # with discord webhooks you can't upload file bigger than 25MB
-CHUNK_SIZE=
-
+CHUNK_SIZE=25165824
 # Enables concurrent file uploads to Discord, resulting in faster file transfers.
 # Note that this will use more RAM, approximately (chunkSize * number of webhooks) + 20% extra bytes.
 # Use with caution based on your system's memory capacity.
