--- a/.env_sample
+++ b/.env_sample
@@ -6,9 +6,11 @@ ps_pass=example
 #discord data:
 ddrv_hook1=weboook1
 ddrv_hook2=webhook2
-#porst config
+#ports config
 ftp_port=45001
+#  Network address for the FTP server to bind to. It defaults to '2525' meaning it listens on all interfaces ($FTP_ADDR).
 http_port=45002
+#Password for the ddrv service, used for FTP, HTTP or WEBDAV access authentication ($PASSWORD).
 wd_port=45003
 ftp_range=45004-45014
 #ddrv options
@@ -20,3 +22,14 @@ CHUNK_SIZE=25165824
 # Note that this will use more RAM, approximately (chunkSize * number of webhooks) + 20% extra bytes.
 # Use with caution based on your system's memory capacity.
 ASYNC_WRITE=false
+
+ #     --ftp-port-range=STRING    Range of ports to be used for passive FTP connections. The range is provided as a string in the format 'start-end' ($FTP_PORT_RANGE).
+  #    --username=STRING          Username for the ddrv service, used for FTP, HTTP or WEBDAV access authentication ($USERNAME).
+   #   --password=STRING          
+    #  --http-addr=":2526"        Network address for the HTTP server to bind to ($HTTP_ADDR)
+    #    --wd-addr=":2527"          Network address for the WebDav server to bind to ($WEBDAV_ADDR)
+ #     --db-url=STRING            Connection string for the Postgres database. The format should be: postgres://user:password@localhost:port/database?sslmode=disable ($DATABASE_URL)
+  #    --webhooks=STRING          Comma-separated list of Manager webhook URLs used for sending attachment messages ($WEBHOOKS).
+   #   --chunk-size=25165824      The maximum size in bytes of chunks to be sent via Manager webhook. By default, it's set to 24MB (25165824 bytes) ($CHUNK_SIZE).
+    #   --async-write              Enables concurrent file uploads to Discord, resulting in faster file transfers. Note that this will use significantly more RAM, approximately (chunkSize * number
+                                 of webhooks) + 20% extra bytes. Use with caution based on your system's memory capacity ($ASYNC_WRITE).
